--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node src/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "unzipper": "^0.12.3"
   },
   "author": "",
   "license": "ISC"
