--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node src/server.js"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "express": "^4.17.1",
     "unzipper": "^0.12.3"
   },
