--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node src/server.js"
   },
   "dependencies": {
-    "archiver": "^7.0.1",
+    "sequelize": "^6.31.0",
+    "sqlite3": "^5.1.6",
     "express": "^4.17.1",
+    "archiver": "^7.0.1",
     "sharp": "^0.33.5",
     "unzipper": "^0.12.3"
   },
